--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "v3",
+  "name": "v4",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.4",
+    "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.23",
-    "@types/react": "18.0.2",
-    "@types/react-dom": "18.0.0",
     "eslint": "8.13.0",
-    "eslint-config-next": "12.1.4",
-    "typescript": "4.6.3"
+    "eslint-config-next": "12.1.5"
   }
 }
