--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules
 /.pnp
 .pnp.js
 
@@ -9,16 +9,15 @@
 /coverage
 
 # next.js
-/.next/
+.next/
 /out/
-
 # production
-/build
+build
 
 # misc
 .DS_Store
 *.pem
-
+public/fonts
 # debug
 npm-debug.log*
 yarn-debug.log*
@@ -33,3 +32,5 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
+
+.vscode
