--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/lexend": "^4.5.10",
+    "@fontsource/lexend-exa": "^4.5.10",
+    "autoprefixer": "^10.4.7",
     "next": "12.1.5",
+    "postcss": "^8.4.14",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "eslint": "8.13.0",
