--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource/lexend": "^4.5.10",
     "@fontsource/lexend-exa": "^4.5.10",
     "autoprefixer": "^10.4.7",
+    "lottie-react": "^2.2.1",
     "next": "12.1.5",
     "postcss": "^8.4.14",
     "react": "18.0.0",
