--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postcss": "^8.4.14",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-fast-marquee": "^1.3.2",
     "tailwindcss": "^3.1.2"
   },
   "devDependencies": {
