--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "tailwindcss": "^3.1.2"
   },
   "devDependencies": {
+    "@types/node": "^17.0.42",
+    "@types/react": "^18.0.12",
     "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "typescript": "^4.7.3"
   }
 }
