--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fontsource/lexend": "^4.5.10",
+    "@svgr/webpack": "^6.2.1",
     "autoprefixer": "^10.4.7",
     "lottie-react": "^2.3.1",
     "next": "12.2.0",
