--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.2.3",
     "postcss": "^8.4.14",
     "react": "18.2.0",
+    "react-chrono": "^1.18.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.3.2",
     "tailwindcss": "^3.1.6"
