--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-chrono": "^1.18.0",
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.3.4",
+    "react-feather": "^2.0.10",
     "tailwindcss": "^3.1.7"
   },
   "devDependencies": {
