--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -14,6 +15,7 @@
     "autoprefixer": "^10.4.8",
     "lottie-react": "^2.3.1",
     "next": "12.2.3",
+    "next-sitemap": "^3.1.21",
     "postcss": "^8.4.14",
     "react": "18.2.0",
     "react-chrono": "^1.18.0",
